--- a/projects/pebble_app/index.html
+++ b/projects/pebble_app/index.html
@@ -74,7 +74,7 @@
                 <div style="display:block;float:left;margin-right:1.5em;vertical-align:top;">
                 <a href="/" ><img src="/img/nc_full_logo.png"></img></a></div>
                 <div style="display:block;float:left;clear:right;vertical-align:top;">
-                Pebble smartwatch app which implements backbite moves
+                Pebble smartwatch app
                 </div>
                 </h1>
                 <p>
