updated appearance of snake puzzle images

--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -89,9 +89,10 @@
                 unique puzzles - people could buy or print their own
                 unique puzzle.
             <div class="image"  style =
-                "float:right;max-width:370px;width:50%;min-width:200px;">
+                "float:right;max-width:270px;width:50%;min-width:150px;">
                 <img src="prototype_unsolved.jpg"
-                alt="Unsolved version of Hamiltonian path puzzle." style="width:90%;max-width:350px" />
+                alt="Unsolved version of Hamiltonian path puzzle."
+                style="width:90%;max-width:250px" />
                 <br/>
                 <p class="caption">4x4x4 Hamiltonian
                 path puzzle in the process of being solved.
@@ -111,9 +112,10 @@
                 single piece then it cannot be altered and hence will
                 remain unique).
             <div class="image"  style =
-                "float:right;max-width:370px;width:50%;min-width:200px;">
+                "float:left;max-width:270px;width:50%;min-width:150px;">
                 <img src="prototype_solved.jpg"
-                alt="Solved version of Hamiltonian path puzzle." style="width:90%;max-width:350px" />
+                alt="Solved version of Hamiltonian path puzzle."
+                style="width:90%;max-width:250px" />
                 <br/>
                 <p class="caption">Solved version of 4x4x4 Hamiltonian
                 path puzzle. It's about 2.8cm per side.
