--- a/index.html
+++ b/index.html
@@ -89,15 +89,6 @@
                 and in future software for download. 
                 </p>
                 <p>
-                <b>Recent updates:</b> 17/2/15, List of <a
-                    href="/research/topics/">topics</a> updated so that
-                it is more than a placeholder, new projects <a
-                    href="/projects/snake_puzzle/">3d printed snake
-                    puzzle</a> and <a
-                    href="/projects/pebble_app/">Pebble smartwatch app
-                    implementing backbite algorithm</a> created.
-                </p>
-                <p>
                 This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
                 which had fallen into disrepair. With the goal of
                 maintaining the new version indefinitely (at least the
@@ -107,6 +98,15 @@
                 particular I'd like to find time to both make my
                 research more accessible to a broader audience, and to
                 add more depth for those who are interested.
+                </p>
+                <p>
+                <b>Recent updates (17/2/15)</b> List of <a
+                    href="/research/topics/">topics</a> updated so that
+                it is more than a placeholder, new projects <a
+                    href="/projects/snake_puzzle/">3d printed snake
+                    puzzle</a> and <a
+                    href="/projects/pebble_app/">Pebble smartwatch app
+                    implementing backbite algorithm</a> created.
                 </p>
                 <!--<h3>Updates</h3>-->
                 <!--[><table width="100%" style="table-layout:fixed;"><]-->
