updated recent updates

--- a/index.html
+++ b/index.html
@@ -105,8 +105,10 @@
                 it is more than a placeholder, new projects <a
                     href="/projects/snake_puzzle/">3d printed snake
                     puzzle</a> and <a
-                    href="/projects/pebble_app/">Pebble smartwatch app
-                    implementing backbite algorithm</a> created.
+                    href="/projects/pebble_app/">Pebble smartwatch
+                    app</a>
+                    which implements the backbite algorithm for sampling
+                    Hamiltonian paths.
                 </p>
                 <!--<h3>Updates</h3>-->
                 <!--[><table width="100%" style="table-layout:fixed;"><]-->
