--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -86,7 +86,7 @@
                 be then created using a 3d printer. The idea is that
                 after the design has been worked out, then it would be
                 possible to print an essentially unbounded number of
-                unique puzzles - people could buy or print their own
+                unique puzzles. i.e. anyone could buy or print their own
                 unique puzzle.
             <div class="image"  style =
                 "float:right;max-width:270px;width:50%;min-width:150px;">
@@ -106,11 +106,11 @@
                 parts are necessary to get it to work which
                 means that the technique used by home 3d printers -
                 fused deposition - is ineffective and one must use a
-                commercial laser sintering method (n.b., parts could be
+                commercial 3d printer which uses laser sintering. N.B., parts could be
                 printed separately and then assembled, but I think it is
                 nice to avoid this, and anyway by making the puzzle a
                 single piece then it cannot be altered and hence will
-                remain unique).
+                remain unique.
             <div class="image"  style =
                 "float:left;max-width:270px;width:50%;min-width:150px;">
                 <img src="prototype_solved.jpg"
@@ -123,26 +123,29 @@
             </div> 
 </p>
 <p>
-
                 I've recently designed my first prototype, using
-                blender+python to produce the stl file for printing, and
-                then had it printed by Shapeways. It is a 4x4x4 cube,
-                which worked and looks pretty good, but it is too fiddly
-                and difficult to solve due to the extreme flexibility of
-                the chain to be a satisfying puzzle.
+                a C implementation of the efficient version of the
+                backbite algorithm, then a blender+python script to produce the stl file for printing, 
+                and
+                then printing it using the commercial 3d printing
+                service <a
+                    href="http://www.shapeways.com">Shapeways</a>. The
+                puzzle I chose to print is a walk in a 4x4x4 cube.
+                It works and looks pretty good, but it is 
+                not a satisfying puzzle for me, as it is 
+                too fiddly
+                and difficult to solve due to the excessive flexibility of
+                the chain.
 </p>
 <p>
-
-                Prototype 2, which involves an internal snap-lock
+                Prototype 2, which will involve an internal snap-lock
                 mechanism to create some stiffness is almost ready for
                 printing.
 </p>
 <p>
-
                 If this is of interest to you, please let me know! I'd
                 be rapt to be able to share ideas. If you're interested
-                in a printed puzzle that would be great too.
-
+                in a printed puzzle of your very own that would be great too.
                 </p>
 
         </div> <!-- content -->
