updated snake puzzle description

--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -139,7 +139,7 @@
 </p>
 <p>
                 Prototype 2, which will involve an internal snap-lock
-                mechanism to create some stiffness is almost ready for
+                mechanism to create some stiffness, is almost ready for
                 printing.
 </p>
 <p>
