updated software release date

--- a/projects/software/index.html
+++ b/projects/software/index.html
@@ -123,8 +123,10 @@ start again.
 </p>
 <p>
 To break the log-jam, I'll tidy up and document
-<em>version 1</em>, and release the code by April 30, 2015 (I'm nominating a date as a form of
-hard commitment, even though no-one will read this!).
+<em>version 1</em>, and release the code in March or April, 2016.
+(Completely missed the deadline of 2015 when I became bogged down with
+teaching, so I would understand if you take this with a grain of salt or
+two.) 
 I'll then consider how to proceed. It may be the case that I
 progressively upgrade this version to add new features, and make it more
 useable, or I look at working on and then releasing <em>version 2</em>.
