--- a/index.html
+++ b/index.html
@@ -88,17 +88,17 @@
                 and various <a href="/projects/">project</a> pages where you can find interactive applications, visualisations, 
                 and in future software for download. 
                 </p>
-                <p>
-                This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,
-                which had fallen into disrepair. With the goal of
-                maintaining the new version indefinitely (at least the
-                url's), I've chosen to create
-                a simple website using only html, css, and javascript.
-                My apologies that there are still a few rough edges! In
-                particular I'd like to find time to both make my
-                research more accessible to a broader audience, and to
-                add more depth for those who are interested.
-                </p>
+                <!--<p>-->
+                <!--This is a long overdue overhaul of my <a href="http://lattice.complex.unimelb.edu.au/home/">old homepage</a>,-->
+                <!--which had fallen into disrepair. With the goal of-->
+                <!--maintaining the new version indefinitely (at least the-->
+                <!--url's), I've chosen to create-->
+                <!--a simple website using only html, css, and javascript.-->
+                <!--My apologies that there are still a few rough edges! In-->
+                <!--particular I'd like to find time to both make my-->
+                <!--research more accessible to a broader audience, and to-->
+                <!--add more depth for those who are interested.-->
+                <!--</p>-->
                 <p>
                 <b>Recent updates (17/2/15)</b> List of <a
                     href="/research/topics/">topics</a> updated so that
