--- a/projects/index.html
+++ b/projects/index.html
@@ -66,7 +66,7 @@
         <div class="bnav w3">
             <ul>
                 <li><a href="/projects/snake_puzzle/">(3d printed puzzle)</a></li>
-                <li></li>
+                <li><a href="/projects/pebble_app/">(pebble app)</a></li>
                 <li></li>
             </ul>
         </div> <!-- bnav -->
