added ORCID link

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -65,9 +65,10 @@
                 </h1>
                 <p>
                 The easiest way to access details of most my publications is via my <a
-                    href="http://arxiv.org/a/clisby_n_1">arXiv</a> and 
+                    href="http://arxiv.org/a/clisby_n_1">arXiv</a>,
                 <a href="http://scholar.google.com/citations?user=8kHXJhAAAAAJ&hl=en">
-                    Google Scholar</a> pages.
+                    Google Scholar</a>, and
+                <a href="http://orcid.org/0000-0001-7068-8347">ORCID</a> pages.
                 </p>
 
 
