added mass spec pic

--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -258,6 +258,15 @@ appointed Program leader of &ldquo;B2: Greenhouse Gases&rdquo;, and
 right in 1996,
 after a year in the job!
 </td></tr>
+    <tr><td>
+                <img src="images/IGE_mass_spec.jpg" alt="Ian inspecting
+                the mass spectrometer." style="width:100%" />
+        </td><td>
+</td></tr>
+<tr><td>
+        Ian carefully inspecting the mass spectrometer at CSIRO.
+        </td><td>
+</td></tr>
 </table>
 <br/>
 <br/>
