added metal Hamiltonian circuit image.

--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -147,6 +147,21 @@
                 be rapt to be able to share ideas. If you're interested
                 in a printed puzzle of your very own that would be great too.
                 </p>
+<p>
+            In the same vein, here's a Hamiltonian circuit on a 4x4x4
+            grid sampled via the backbite algorithm, and printed in
+            steel by Shapeways.
+            <div class="image"  style =
+                "float:left;max-width:270px;width:50%;min-width:150px;">
+                <img src="hp_metal.jpg"
+                alt="Hamiltonian circuit on a 4x4x4 grid."
+                style="width:90%;max-width:250px" />
+                <br/>
+                <p class="caption">Hamiltonian circuit on a 4x4x4 grid,
+                printed by Shapeways. It's about 1.8cm per side.
+                    </p>
+            </div> 
+                </p>
 
         </div> <!-- content -->
     </div> <!-- contentblock -->
