changed position of metal Hamiltonian circuit image.

--- a/projects/snake_puzzle/index.html
+++ b/projects/snake_puzzle/index.html
@@ -138,6 +138,16 @@
                 the chain.
 </p>
 <p>
+            <div class="image"  style =
+                "float:right;max-width:270px;width:50%;min-width:150px;">
+                <img src="hp_metal.jpg"
+                alt="Hamiltonian circuit on a 4x4x4 grid."
+                style="width:90%;max-width:250px" />
+                <br/>
+                <p class="caption">Hamiltonian circuit on a 4x4x4 grid,
+                printed by Shapeways. It's about 1.8cm per side.
+                    </p>
+            </div> 
                 Prototype 2, which will involve an internal snap-lock
                 mechanism to create some stiffness, is almost ready for
                 printing.
@@ -148,19 +158,9 @@
                 in a printed puzzle of your very own that would be great too.
                 </p>
 <p>
-            In the same vein, here's a Hamiltonian circuit on a 4x4x4
+            In the same vein, I've included a photo of a Hamiltonian circuit on a 4x4x4
             grid sampled via the backbite algorithm, and printed in
             steel by Shapeways.
-            <div class="image"  style =
-                "float:left;max-width:270px;width:50%;min-width:150px;">
-                <img src="hp_metal.jpg"
-                alt="Hamiltonian circuit on a 4x4x4 grid."
-                style="width:90%;max-width:250px" />
-                <br/>
-                <p class="caption">Hamiltonian circuit on a 4x4x4 grid,
-                printed by Shapeways. It's about 1.8cm per side.
-                    </p>
-            </div> 
                 </p>
 
         </div> <!-- content -->
