Added zoomable SAW project.

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -296,6 +296,40 @@ out of algorithms for walks.
 
             </p>
             <p>
+            Now I will outline one concrete, realistically achievable
+            Masters level project which is at the interface of computer science and
+            mathematical physics.
+            </p>
+            <p>
+            
+            The SAW-tree implementation of the pivot algorithm I have developed makes
+            it feasible to sample uniformly at random extremely long self-avoiding
+            walks. Recently, I have pushed this to the point where these
+            walks may have up to 1 billion steps. Now, these are sparse,
+            random fractal objects, with non-trivial structure from the
+            largest to the smallest length scales. In two dimensions the
+            self-avoiding constraint is strongest, and hence the walks
+            are spread out more in this dimension. Walks with one
+            billion steps have linear dimensions of roughly 5 million
+            steps by 5 million steps, which could be represented in a 25
+            terapixel image if the full resolution is kept. This is of
+            the same order as the largest images generated until now.
+            (N.B., they are sparse, so this is admittedly an atypical
+            case.)
+            </p>
+            <p>
+
+            Now, the same SAW-tree data structure that allows for
+            efficient Monte Carlo simulation also allows for dramatic
+            compression, and makes it possible to produce an
+            interactive, zoomable image of such long SAWs as a web
+            application.  I think that
+            if completed this would be a tour de force in mathematical
+            visualisation. If you're interested in doing this let me
+            know (I'd like to, but unfortunately it is some way from the
+            top of my list of priorities).
+            </p>
+            <p>
 Please visit the <a href="/projects/">projects</a> page
 if you are interested in seeing visualisations of my work.
 
