Edited zoomable SAW project.

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -325,9 +325,8 @@ out of algorithms for walks.
             interactive, zoomable image of such long SAWs as a web
             application.  I think that
             if completed this would be a tour de force in mathematical
-            visualisation. If you're interested in doing this let me
-            know (I'd like to, but unfortunately it is some way from the
-            top of my list of priorities).
+            visualisation! If you're interested in doing this let me
+            know. (I'd like to, but have other things to do for now.)
             </p>
             <p>
 Please visit the <a href="/projects/">projects</a> page
