Edited zoomable SAW project.

--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -311,7 +311,7 @@ out of algorithms for walks.
             self-avoiding constraint is strongest, and hence the walks
             are spread out more in this dimension. Walks with one
             billion steps have linear dimensions of roughly 5 million
-            steps by 5 million steps, which could be represented in a 25
+            steps by 5 million, which could be represented in a 25
             terapixel image if the full resolution is kept. This is of
             the same order as the largest images generated until now.
             (N.B., they are sparse, so this is admittedly an atypical
