--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -75,13 +75,28 @@
                 <h3> Articles, book chapters, and other publications </h3>
                 <table>
                     <tr><td>
+                            Nathan Clisby and Burkhard D&uuml;nweg,
+                            High precision estimate of the hydrodynamic
+                            radius for self-avoiding walks. Submitted to
+                            Phys. Rev. E.
+                    </td></tr>
+                    <tr><td>
+                            Eric Horwath, Nathan Clisby, and Peter
+                            Virnau, Knots in finite memory walks.  <a
+                                href=http://iopscience.iop.org/1742-6596/750/1/012010>J.
+                                Phys.: Conf. Ser.</a> <b>750</b>: 012010
+                            (2016).
+                    </td></tr>
+                    <tr><td>
                             Nathan Clisby, Andrew R. Conway, and Anthony
                             J. Guttmann,
                             Three-dimensional terminally attached
                             self-avoiding walks and bridges,
                             <a
-                                href="http://arxiv.org/abs/1504.02085">arXiv:1504.02085</a>
-                            (2015).
+                                href="http://arxiv.org/abs/1504.02085">arXiv:1504.02085</a>,
+                            <a href="http://dx.doi.org/10.1088/1751-8113/49/1/015004">J. Phys.
+                                A.: Math. Theor.</a> <b>49</b>: 015004
+                            (2016).
                     </td></tr>
                     <tr><td>
                             Nathan Clisby, Endless self-avoiding walks,
