--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -207,12 +207,12 @@
                                         (2004).</td></tr>
                                 <tr><td>Nathan Clisby and Barry M. McCoy, Analytic
                                         calculation of
-                                        <i>B<sub>4</sub></i> for hard
+                                        <i>B&#8324;</i> for hard
                                         spheres in even dimensions, <a
                                             href="http://www.arxiv.org/abs/cond-mat/0303098">cond&ndash;mat/0303098</a>,
                                         <a
                                             href="http://dx.doi.org/10.1023/B:JOSS.0000013959.30878.d2">J.
-                                            Stat. Phys.</a> <b>114</b>: 1343&ndash;1361
+                                            Stat. Phys.</a> <b>114</b>: 1343&ndash;1360
                                         (2004).</td></tr>
                                 <tr><td>Nathan Clisby and Barry M. McCoy,
                                         Negative virial coefficients and the dominance
