Hydrodynamic radius paper accepted.

--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -77,8 +77,8 @@
                     <tr><td>
                             Nathan Clisby and Burkhard D&uuml;nweg,
                             High precision estimate of the hydrodynamic
-                            radius for self-avoiding walks. Submitted to
-                            Phys. Rev. E.
+                            radius for self-avoiding walks. Accepted for
+                            publication in Phys. Rev. E.
                     </td></tr>
                     <tr><td>
                             Eric Horwath, Nathan Clisby, and Peter
