Minor edit of SAW feature.

--- a/projects/saw_feature/index.html
+++ b/projects/saw_feature/index.html
@@ -568,7 +568,7 @@ insight into questions such as how the presence of knotting influences
 DNA replication. The accurate estimates of observables obtained for
 various large <span class="math inline"><em>n</em></span> have already
 provided better quality inputs for the estimation of the critical
-exponents described in Section 1.</p>
+exponents described earlier.</p>
             <div class="image"  style =
                 "float:left;width:60%;height:25%;min-width:400px;">
             <img src="Fig7.png" alt="Figure 7" height="90%" width="90%" style="float:center;">
