--- a/research/publications/index.html
+++ b/research/publications/index.html
@@ -77,8 +77,12 @@
                     <tr><td>
                             Nathan Clisby and Burkhard D&uuml;nweg,
                             High precision estimate of the hydrodynamic
-                            radius for self-avoiding walks. Accepted for
-                            publication in Phys. Rev. E.
+                            radius for self-avoiding walks. 
+                            <a
+                                href="https://doi.org/10.1103/PhysRevE.94.052102">Phys.
+                                Rev. E.</a> <b>94</b>: 052102 (2016).
+    Chosen as an <a
+        href="http://journals.aps.org/pre#suggestions">Editors' suggestion</a>.
                     </td></tr>
                     <tr><td>
                             Eric Horwath, Nathan Clisby, and Peter
