Made Jasons article live.

--- a/index.html
+++ b/index.html
@@ -101,15 +101,13 @@
                 <!--</p>-->
 
                 <p>
-                <b>Recent updates (17/2/15)</b> List of <a
-                    href="/research/topics/">topics</a> updated so that
-                it is more than a placeholder, new projects <a
-                    href="/projects/snake_puzzle/">3d printed snake
-                    puzzle</a> and <a
-                    href="/projects/pebble_app/">Pebble smartwatch
-                    app</a>
-                    which implements the backbite algorithm for sampling
-                    Hamiltonian paths.
+                <b>Recent update (3/11/16)</b>
+<a
+    href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
+    Whyte</a> has written a feature article which gives a detailed
+but accessible explanation on the ingredients for fast Monte Carlo
+simulation of self-avoiding walks. Please see 
+the <a href="/projects/saw_feature/">SAW feature</a> page.
                 </p>
                 <!--<h3>Updates</h3>-->
                 <!--[><table width="100%" style="table-layout:fixed;"><]-->
