--- a/projects/sm_simulator/index.html
+++ b/projects/sm_simulator/index.html
@@ -106,7 +106,7 @@
             <ul>
                 <li><a href="/projects/snake_puzzle/">(3d printed puzzle)</a></li>
                 <li><a href="/projects/pebble_app/">(pebble app)</a></li>
-                <li></li>
+                <li><a href="/projects/saw_feature/">(saw feature)</a></li>
             </ul>
         </div> <!-- bnav -->
     </div> <!-- topbar -->
