--- a/research/index.html
+++ b/research/index.html
@@ -133,6 +133,10 @@
             for a wide range of applications, both in the field of statistical mechanics and
             more broadly, for which either simple sampling or Markov chain Monte Carlo is the state
             of the art.
+(<a
+    href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
+    Whyte</a> has written a lucid explanation of the basic idea at
+the <a href="/projects/saw_feature/">SAW feature</a> page.)
             </p>
             <p>
             I'm interested in many other topics (it may be shorter to
