--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -100,13 +100,18 @@ earlier work of Tom Kennedy, Neal Madras and Alan Sokal. This radically
 efficient implementation allows for global changes to be made to the
 system in logarithmic time, and so opens up the possibility of studying
 truly large polymer systems with millions or even billions of monomers.
-
             </p>
             <p>
 The underlying principle can be applied to any system for which simple
 sampling is the state of the art.
 I am pursuing applications to percolation models and quantitative
 finance, but there must be many more possibilities.
+            </p>
+            <p>
+<a
+    href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
+    Whyte</a> has written up an excellent explanation of the basic idea at
+the <a href="/projects/saw_feature/">SAW feature</a> page.
             </p>
 
             <h2 id="virial">
