--- a/projects/saw_feature/index.html
+++ b/projects/saw_feature/index.html
@@ -91,7 +91,8 @@ Faster simulation of self-avoiding walks promises to untangle knotty problems in
                 </h1>
 <br />
 <p>
-by Jason Whyte (April, 2016).
+by <a
+    href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason Whyte</a> (April, 2016).
 </p>
 <p>
 This feature article describing my research into fast simulations of
