--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -97,8 +97,7 @@ Enting fest, 2015
                         </td><td>
                          Roger Francey
                         </td><td>
-                        Historical
-                            perspective I
+                        <a href="talks/francey_entingfest.pdf">Historical perspective I</a>
                 </td></tr>
                 <tr><td style="text-align:right;padding-right:20px">
                         10:05
