Added link to Enting fest.

--- a/index.html
+++ b/index.html
@@ -101,7 +101,18 @@
                 <!--</p>-->
 
                 <p>
-                <b>Recent update (3/11/16)</b>
+                <b>Recent updates (November 2016)</b>
+                </p>
+                <p>
+                In March 2015 a mini-symposium was held in honour of Ian
+                Enting, to celebrate his unique career in which he has
+                made considerable contributions in the fields of
+                Climate, Atmospheric Composition and Statistical
+                Physics. You can find more information, including links
+                to some fascinating talks, at the <a
+                    href="entingfest">Enting fest</a> webpage.
+                </p>
+                <p>
 <a
     href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
     Whyte</a> has written a feature article which gives a detailed
