--- a/mcalgorithms/contact.html
+++ b/mcalgorithms/contact.html
@@ -85,10 +85,10 @@ jQuery.extend(Drupal.settings, { "basePath": "/mcalgorithms/", "googleanalytics"
     <h3>Organisers</h3>
 <table>
 <tr>
-<td> Nathan Clisby (<a href="http://lattice.complex.unimelb.edu.au/home/">homepage</a>)</td> <td> University of Melbourne</td>
+<td> Nathan Clisby (<a href="http://clisby.net/">homepage</a>)</td> <td> University of Melbourne</td>
 </tr>
 <tr>
-<td> Tim Garoni (<a href="http://spin.complex.unimelb.edu.au/~tgaroni">homepage</a>)</td> <td> University of Melbourne</td>
+<td> Tim Garoni (<a href="http://users.monash.edu.au/~garonit/">homepage</a>)</td> <td> University of Melbourne</td>
 </tr>
 </table>
 <h3>Contact details</h3>
