Wills phrase generator

--- a/phrases/will/index.html
+++ b/phrases/will/index.html
@@ -4,7 +4,7 @@
     <title>Will's Random Phrase Generator!</title>
     <link rel="canonical" href="/" />
     <meta name="description" content="Will's Random Phrase Generator!"> 
-    <link rel="stylesheet" type="text/css" href="css/maia.css">
+    <link rel="stylesheet" type="text/css" href="css/will.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta http-equiv="refresh" content="5" >
     <script>
