Wills phrase generator

--- a/phrases/will/index.html
+++ b/phrases/will/index.html
@@ -112,11 +112,17 @@
                 </h1>
                 <br />
                 <br />
-                <br />
+                <p>
+                <div class="image">
+                <img src="chewbacca.jpg" alt="me" width="25%"
+                style="float:right;min-width:100px;margin: 10px 0px 0px
+                10px">
+            </div>
                 <blockquote style="font-size:150%">
                 <div id="phrase">
                 </div>
                 </blockquote>
+                </p>
                 <br />
             </div> <!-- content -->
         </div> <!-- contentblock -->
