dhm phrase generator

--- a/phrases/dhm/index.html
+++ b/phrases/dhm/index.html
@@ -13,70 +13,71 @@
         }
         var i;
 
-i = 0;
-var title = [];
-title[i++] = "Queen";
-title[i++] = "King";
-title[i++] = "Professor";
-title[i++] = "Prime Minister";
-title[i++] = "Master";
-title[i++] = "Princess";
-title[i++] = "Punk";
-title[i++] = "Dr";
-title[i++] = "Nurse";
-title[i++] = "Blacksmith";
-title[i++] = "Wizard";
-var ntitle = i;
-i = 0;
-var namearr = [];
-namearr[i++] = "Hazel";
-namearr[i++] = "Maia";
-namearr[i++] = "Dante";
-namearr[i++] = "Bob";
-namearr[i++] = "George";
-namearr[i++] = "Ruby";
-namearr[i++] = "Layla";
-namearr[i++] = "Yoda";
-namearr[i++] = "James";
-namearr[i++] = "Hello Kitty";
-namearr[i++] = "Bridie";
-namearr[i++] = "Sherbet";
-namearr[i++] = "Malala";
-namearr[i++] = "Stormy";
-namearr[i++] = "Marley";
-namearr[i++] = "Pachiss";
-namearr[i++] = "Twichiss";
-var nname = i;
-i = 0;
-var adjective = [];
-adjective[i++] = "silly";
-adjective[i++] = "cool";
-adjective[i++] = "totally awesome";
-adjective[i++] = "stinky";
-adjective[i++] = "the best";
-adjective[i++] = "dumb as a spud";
-adjective[i++] = "embarrassing";
-adjective[i++] = "super smart";
-adjective[i++] = "interesting";
-adjective[i++] = "crazy";
-adjective[i++] = "funny";
-adjective[i++] = "scary";
-i = 0;
-var punctuation = [];
-punctuation[i++] = ".";
-punctuation[i++] = "!";
-punctuation[i++] = "!!";
-punctuation[i++] = "!!!";
-punctuation[i++] = "!!!!!!";
-punctuation[i++] = " :)";
-punctuation[i++] = " :(";
-punctuation[i++] = " ;(";
-punctuation[i++] = " ;)";
-punctuation[i++] = " :/";
-punctuation[i++] = " ;/";
-punctuation[i++] = "?!";
-punctuation[i++] = "!?";
-var npunctuation = i;
+        i = 0;
+        var title = [];
+        title[i++] = "Queen";
+        title[i++] = "King";
+        title[i++] = "Professor";
+        title[i++] = "Prime Minister";
+        title[i++] = "Master";
+        title[i++] = "Princess";
+        title[i++] = "Punk";
+        title[i++] = "Dr";
+        title[i++] = "Nurse";
+        title[i++] = "Blacksmith";
+        title[i++] = "Wizard";
+        var ntitle = i;
+        i = 0;
+        var namearr = [];
+        namearr[i++] = "Hazel";
+        namearr[i++] = "Maia";
+        namearr[i++] = "Dante";
+        namearr[i++] = "Bob";
+        namearr[i++] = "George";
+        namearr[i++] = "Ruby";
+        namearr[i++] = "Layla";
+        namearr[i++] = "Yoda";
+        namearr[i++] = "James";
+        namearr[i++] = "Hello Kitty";
+        namearr[i++] = "Bridie";
+        namearr[i++] = "Sherbet";
+        namearr[i++] = "Malala";
+        namearr[i++] = "Stormy";
+        namearr[i++] = "Marley";
+        namearr[i++] = "Pachiss";
+        namearr[i++] = "Twichiss";
+        var nname = i;
+        i = 0;
+        var adjective = [];
+        adjective[i++] = "silly";
+        adjective[i++] = "cool";
+        adjective[i++] = "totally awesome";
+        adjective[i++] = "stinky";
+        adjective[i++] = "the best";
+        adjective[i++] = "dumb as a spud";
+        adjective[i++] = "embarrassing";
+        adjective[i++] = "super smart";
+        adjective[i++] = "interesting";
+        adjective[i++] = "crazy";
+        adjective[i++] = "funny";
+        adjective[i++] = "scary";
+        var nadjective = i;
+        i = 0;
+        var punctuation = [];
+        punctuation[i++] = ".";
+        punctuation[i++] = "!";
+        punctuation[i++] = "!!";
+        punctuation[i++] = "!!!";
+        punctuation[i++] = "!!!!!!";
+        punctuation[i++] = " :)";
+        punctuation[i++] = " :(";
+        punctuation[i++] = " ;(";
+        punctuation[i++] = " ;)";
+        punctuation[i++] = " :/";
+        punctuation[i++] = " ;/";
+        punctuation[i++] = "?!";
+        punctuation[i++] = "!?";
+        var npunctuation = i;
 
         function generatePhrase() {
             //alert('hello');
@@ -116,16 +117,16 @@ var npunctuation = i;
         <div id="contentblock">
             <div id="content">
                 <h1 style="display:inline-block;line-height:1.0em;margin-bottom:-0.3em;">
-                    Will's Random Phrase Generator!
+                    Dante, Hazel and Maia's Random Phrase Generator!
                 </h1>
                 <br />
                 <br />
                 <p>
-                <div class="image">
-                <img src="chewbacca.jpg" alt="me" width="25%"
-                style="float:right;min-width:100px;margin: 10px 0px 0px
-                10px">
-            </div>
+                <!--<div class="image">-->
+                <!--<img src="chewbacca.jpg" alt="me" width="25%"-->
+                <!--style="float:right;min-width:100px;margin: 10px 0px 0px-->
+                <!--10px">-->
+            <!--</div>-->
                 <blockquote style="font-size:150%">
                 <div id="phrase">
                 </div>
