--- a/entingfest/index.html
+++ b/entingfest/index.html
@@ -3,8 +3,7 @@
 <head>
     <title>Entingfest 2015</title>
     <link rel="canonical" href="/" />
-    <meta name="description" content="Homepage of Maia Clisby de la
-    Piedad."> 
+    <meta name="description" content="Homepage of Entingfest 2015."> 
     <link rel="stylesheet" type="text/css" href="css/entingfest.css">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="apple-touch-icon" sizes="57x57" href="apple-touch-icon-57x57.png">
