--- a/nanomeso/index.html
+++ b/nanomeso/index.html
@@ -178,36 +178,36 @@ modelling materials for engineering applications.
 <h2>Photos</h2>
 <table>
 <tr>
-<td><img src="images/01.jpg" alt="image 01" style="width:100%" /></td>
-<td><img src="images/02.jpg" alt="image 02" style="width:100%" /></td>
+<td><a href="images/01.jpg"><img src="images/01_thumb.jpg" alt="image 01" style="width:100%" /></a></td>
+<td><a href="images/02.jpg"><img src="images/02_thumb.jpg" alt="image 02" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/03.jpg" alt="image 03" style="width:100%" /></td>
-<td><img src="images/04.jpg" alt="image 04" style="width:100%" /></td>
+<td><a href="images/03.jpg"><img src="images/03_thumb.jpg" alt="image 03" style="width:100%" /></a></td>
+<td><a href="images/04.jpg"><img src="images/04_thumb.jpg" alt="image 04" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/05.jpg" alt="image 05" style="width:100%" /></td>
-<td><img src="images/06.jpg" alt="image 06" style="width:100%" /></td>
+<td><a href="images/05.jpg"><img src="images/05_thumb.jpg" alt="image 05" style="width:100%" /></a></td>
+<td><a href="images/06.jpg"><img src="images/06_thumb.jpg" alt="image 06" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/07.jpg" alt="image 07" style="width:100%" /></td>
-<td><img src="images/08.jpg" alt="image 08" style="width:100%" /></td>
+<td><a href="images/07.jpg"><img src="images/07_thumb.jpg" alt="image 07" style="width:100%" /></a></td>
+<td><a href="images/08.jpg"><img src="images/08_thumb.jpg" alt="image 08" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/09.jpg" alt="image 09" style="width:100%" /></td>
-<td><img src="images/10.jpg" alt="image 10" style="width:100%" /></td>
+<td><a href="images/09.jpg"><img src="images/09_thumb.jpg" alt="image 09" style="width:100%" /></a></td>
+<td><a href="images/10.jpg"><img src="images/10_thumb.jpg" alt="image 10" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/11.jpg" alt="image 11" style="width:100%" /></td>
-<td><img src="images/12.jpg" alt="image 12" style="width:100%" /></td>
+<td><a href="images/11.jpg"><img src="images/11_thumb.jpg" alt="image 11" style="width:100%" /></a></td>
+<td><a href="images/12.jpg"><img src="images/12_thumb.jpg" alt="image 12" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/13.jpg" alt="image 13" style="width:100%" /></td>
-<td><img src="images/14.jpg" alt="image 14" style="width:100%" /></td>
+<td><a href="images/13.jpg"><img src="images/13_thumb.jpg" alt="image 13" style="width:100%" /></a></td>
+<td><a href="images/14.jpg"><img src="images/14_thumb.jpg" alt="image 14" style="width:100%" /></a></td>
 </tr>
 <tr>
-<td><img src="images/15.jpg" alt="image 15" style="width:100%" /></td>
-<td><img src="images/16.jpg" alt="image 16" style="width:100%" /></td>
+<td><a href="images/15.jpg"><img src="images/15_thumb.jpg" alt="image 15" style="width:100%" /></a></td>
+<td><a href="images/16.jpg"><img src="images/16_thumb.jpg" alt="image 16" style="width:100%" /></a></td>
 </tr>
 </table>
 <br/>
