--- a/nanomeso/index.html
+++ b/nanomeso/index.html
@@ -176,6 +176,9 @@ modelling materials for engineering applications.
 <br/>
 <br/>
 <h2>Photos</h2>
+<p>
+Click on any of the images below to obtain the high resolution version.
+</p>
 <table>
 <tr>
 <td><a href="images/01.jpg"><img src="images/01_thumb.jpg" alt="image 01" style="width:100%" /></a></td>
