--- a/research/index.html
+++ b/research/index.html
@@ -122,17 +122,21 @@
             historically important for a host of reasons, including the
             fact that when compressed the hard sphere system changes state
             from a fluid to a solid. However, much
-            remains to be done in this direction!
+            remains to be done in this direction! Progress depends on
+            implementing an efficient algorithm for the calculation of a graph
+            theoretic property that is related to the chromatic
+            polynomial.
             </p>
             <p>
-            More recently, my primary research focus has been to build upon the intuition
-            I have gained into the efficient Monte Carlo simulation of self-avoiding
-            walks via the pivot algorithm.
-            I believe that significant progress
-            is possible
-            for a wide range of applications, both in the field of statistical mechanics and
-            more broadly, for which either simple sampling or Markov chain Monte Carlo is the state
-            of the art.
+            More recently, my primary research focus has been to build
+            upon the intuition I have gained into the efficient Monte
+            Carlo simulation of self-avoiding walks via the pivot
+            algorithm.  Significant progress is possible for a wide
+            range of applications, both in the field of statistical
+            mechanics (percolation, Hamiltonian paths, hard spheres) and
+            more broadly (exotic option pricing), for which either
+            simple sampling or Markov chain Monte Carlo is the state of
+            the art. 
 (<a
     href="https://scholar.google.com.au/citations?hl=en&user=vLenKQMAAAAJ">Jason
     Whyte</a> has written a lucid explanation of the basic idea at
