--- a/research/topics/index.html
+++ b/research/topics/index.html
@@ -82,7 +82,7 @@
             <a href="#climate">
                 Multi-gas modelling for climate change</a>,
             <a href="#polymer">
-                Polymer physics</a>,
+                Polymer physics and Hamiltonian paths</a>,
             <a href="#visualisation">
                 Mathematical visualisation</a>,
             <a href="#gpu">
@@ -104,7 +104,9 @@ truly large polymer systems with millions or even billions of monomers.
             <p>
 The underlying principle can be applied to any system for which simple
 sampling is the state of the art.
-I am pursuing applications to percolation models and quantitative
+I am pursuing applications to percolation, Hamiltonian paths (mentioned
+in more detail below), hard spheres, and the pricing of exotic
+options in quantitative
 finance, but there must be many more possibilities.
             </p>
             <p>
@@ -234,7 +236,7 @@ two to multi-century.
 
 
             <h2 id="polymer">
-                Polymer physics
+                Polymer physics and Hamiltonian paths
             </h2>
             <p>
 Monte Carlo algorithms which utilise so-called connectivity
