--- a/index.html
+++ b/index.html
@@ -79,8 +79,7 @@
                 <a href="http://www.unimelb.edu.au/">University of
                     Melbourne</a>, supported by an ARC Future Fellowship.
                 I'm also an associate investigator of 
-                <a href="http://www.complex.org.au/">MASCOS</a>
-                and <a href="http://acems.org.au/">ACEMS</a>.
+                <a href="http://acems.org.au/">ACEMS</a>.
                 </p>
                 <p>
             Here you will find some details about my <a href="/research/">research</a> (including
